Bug 170519 - ksystraycmd crashes after start
Summary: ksystraycmd crashes after start
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 171801 176421 177078 188619 191210 196552 200579 201355 202314 202853 253350 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-06 11:23 UTC by Wolfgang
Modified: 2013-05-05 06:32 UTC (History)
21 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang 2008-09-06 11:23:49 UTC
Version:            (using KDE 4.1.1)
OS:                Linux
Installed from:    SuSE RPMs

Anwendung: KSysTrayCmd (ksystraycmd), Signal SIGSEGV
[?1034h(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0x7fdffa91e700 (LWP 3219)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#5  0x0000000000000000 in ?? ()
#6  0x00007fdff96a6d38 in NETRootInfo::update () from /usr/lib64/libkdeui.so.5
#7  0x00007fdff9696fcd in ?? () from /usr/lib64/libkdeui.so.5
#8  0x00007fdff969a8bb in KWindowSystem::connectNotify ()
   from /usr/lib64/libkdeui.so.5
#9  0x00007fdff7e3ff88 in QObject::connect () from /usr/lib64/libQtCore.so.4
#10 0x0000000000403950 in _start ()
#0  0x00007fdff3b15230 in nanosleep () from /lib64/libc.so.6
Comment 1 Eike Hein 2008-09-15 12:53:23 UTC
I'm experiencing the same crash, as are Pino Toscano (pinotree) and various people on #kde. Here's a backtrace from Pino, pointing to kdelibs/kdeui/windowmanagement:

[Switching to Thread 0x7f3f20947780 (LWP 20976)]
0x00007f3f200bb5d9 in NETRootInfo::update (this=0x784338, dirty_props=0x784640)
    at KDE/kdelibs/kdeui/windowmanagement/netwm.cpp:2140
2140                            addClient(wins[n]);
(gdb) bt
#0  0x00007f3f200bb5d9 in NETRootInfo::update (this=0x784338, dirty_props=0x784640)
    at KDE/kdelibs/kdeui/windowmanagement/netwm.cpp:2140
#1  0x00007f3f200bd44c in NETRootInfo::activate (this=0x784338) at KDE/kdelibs/kdeui/windowmanagement/netwm.cpp:818
#2  0x00007f3f200ab169 in KWindowSystemPrivate::activate (this=0x784310)
    at KDE/kdelibs/kdeui/windowmanagement/kwindowsystem_x11.cpp:122
#3  0x00007f3f200ab30b in KWindowSystem::init (what=1) at KDE/kdelibs/kdeui/windowmanagement/kwindowsystem_x11.cpp:370
#4  0x00007f3f200aca44 in KWindowSystem::connectNotify (this=0x783b70, signal=0x40637b "2windowAdded(WId)")
    at KDE/kdelibs/kdeui/windowmanagement/kwindowsystem_x11.cpp:348
#5  0x00007f3f1ea91727 in QObject::connect (sender=0x783b70, signal=0x40637c "windowAdded(WId)", receiver=0x7fff28a95200,
    method=0x40636a "windowAdded(WId)", type=Qt::AutoConnection) at kernel/qobject.cpp:2455
#6  0x0000000000404e43 in QObject::connect (this=0x7fff28a95200, asender=0x783b70, asignal=0x40637b "2windowAdded(WId)",
    amember=0x406369 "1windowAdded(WId)", atype=Qt::AutoConnection)
    at qt-copy/include/QtCore/../../src/corelib/kernel/qobject.h:309
#7  0x0000000000403984 in KSysTrayCmd::startClient (this=0x7fff28a95200) at KDE/kdebase/workspace/ksystraycmd/ksystraycmd.cpp:174
#8  0x0000000000404142 in KSysTrayCmd::start (this=0x7fff28a95200) at KDE/kdebase/workspace/ksystraycmd/ksystraycmd.cpp:69
#9  0x0000000000405bac in main (argc=2, argv=0x7fff28a95818) at KDE/kdebase/workspace/ksystraycmd/main.cpp:132
Comment 2 Eike Hein 2008-09-15 12:54:36 UTC
CC'ing Lubos.
Comment 3 Lubos Lunak 2008-09-15 13:07:19 UTC
I don't see why the code should crash there. Probably a corruption somewhere else.
Comment 4 Dario Andres 2008-12-05 16:17:15 UTC
*** Bug 176421 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2008-12-06 22:18:55 UTC
*** Bug 177078 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2008-12-25 17:32:36 UTC
*** Bug 171801 has been marked as a duplicate of this bug. ***
Comment 7 Paul Hartman 2009-01-25 05:16:42 UTC
Happens for me, too, every time, no matter what program I try to launch.

$ ksystraycmd --version
Qt: 4.4.2
KDE: 4.2.00 (KDE 4.2.0)
KSysTrayCmd: KSysTrayCmd 0.1

$ ksystraycmd kcalc
KCrash: Application 'ksystraycmd' crashing...
sock_file=/home/paul/.kde4/socket-e6600/kdeinit4__0


Backtrace says:

Application: KSysTrayCmd (ksystraycmd), signal SIGSEGV
0x00007f594d297d90 in nanosleep () from /lib/libc.so.6

Thread 1 (Thread 0x7f5951316750 (LWP 28918)):
[KCrash Handler]
#5  0x00007f5950ca92e2 in NETRootInfo::update () from /usr/lib64/libkdeui.so.5
#6  0x00007f5950c9981d in KWindowSystemPrivate::activate () from /usr/lib64/libkdeui.so.5
#7  0x00007f5950c9ce5b in KWindowSystem::connectNotify () from /usr/lib64/libkdeui.so.5
#8  0x00007f594f0afaf7 in QObject::connect () from /usr/lib64/qt4/libQtCore.so.4
#9  0x0000000000403b20 in KSysTrayCmd::startClient ()
#10 0x000000000040456d in KSysTrayCmd::start ()
#11 0x0000000000405bdf in main ()

Comment 8 Erik Boritsch 2009-02-22 04:12:14 UTC
The bug is still here, ksystraycmd in completely unusable in kde-4.2.0
Comment 9 Charles T Bell 2009-03-25 21:10:04 UTC
Same output as Wolfgang after new install on AMD64:occurred immediately upon logging in.
Comment 10 Dario Andres 2009-04-01 23:21:41 UTC
*** Bug 188619 has been marked as a duplicate of this bug. ***
Comment 11 Paul Hartman 2009-04-02 01:26:34 UTC
still broken kde 4.2.2
Comment 12 Charles T Bell 2009-04-07 23:54:55 UTC
Linux kubuntu 2.6.27-11-generic #1 SMP Wed Apr 1 20:53:41 UTC 2009 x86_64 GNU/Linux
Still happening after recent kernel upgrade. Happens on login only in my case.

The application KsysTrayCmd (ksystraycmd) crashed and caused the signal 11(SIGSEGV).
Please help us improve the software you use by filing a bug report at http://bugs.kde.org.  Useful details include how to reproduce the 

(see information below)
/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
This backtrace appears to be of no use.
This is probably because your packages are built in a way which prevents creation of proper backtraces, or the stack frame was seriously corrupted in the crash.
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0x7f5bfc4246f0 (LWP 6937)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0x00007f5bf9c686b0 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (process 6937)]
Thread 1 (Thread 0x7f5bfc4246f0 (LWP 6937)):
#0 0x00007f5bf9c686b0 in nanosleep () from /lib/libc.so.6
#1 0x00007f5bf9c68507 in sleep () from /lib/libc.so.6
#2 0x00007f5bfbec3b0f in ?? () from /usr/lib/libkdeui.so.5
#3 0x00007f5bfbec444a in KCrash::defaultCrashHandler () from /usr/lib/libkdeui.so.5
#4 <signal handler called>
#5 0x00007f5bfadba368 in XGetWindowProperty () from /usr/lib/libX11.so.6
#6 0x00007f5bfbf88cf6 in NETRootInfo::update () from /usr/lib/libkdeui.so.5
#7 0x00007f5bfbf79fdd in ?? () from /usr/lib/libkdeui.so.5
#8 0x00007f5bfbf7d7db in KWindowSystem::connectNotify () from /usr/lib/libkdeui.so.5
#9 0x00007f5bfb200d27 in QObject::connect () from /usr/lib/libQtCore.so.4
#10 0x0000000000403760 in _start ()
#0 0x00007f5bf9c686b0 in nanosleep () from /lib/libc.so.6
Comment 13 Lubos Lunak 2009-04-08 10:27:48 UTC
Adding back all the CC that got removed by the previous comment.
Comment 14 Barafu Albino Cheetah 2009-04-17 04:35:10 UTC
The same thing for me, with the same backtrace. However, it disappeared when I removed LinuxDC++ from autorun. (It places a tray icon in kde3) When strating manually, it doesn't place tray icon, but no crashes. Pidgin, for example, starts and shows tray icon normally.
Comment 15 Pablo Montepagano 2009-04-29 23:40:35 UTC
Please, fix this. ksystraycmd is completely unusable. Will it work with GTK apps (i.e., Firefox)?
Comment 16 Paul Hartman 2009-04-29 23:58:52 UTC
(In reply to comment #15)
> Please, fix this. ksystraycmd is completely unusable. Will it work with GTK
> apps (i.e., Firefox)?

It does not work with anything that I've seen. It fails every time. As a workaround I am using the program "alltray".
Comment 17 Dario Andres 2009-05-19 19:26:51 UTC
Are you still getting the crash with KDE4.2x+ or KDE4.3x+ ? Thanks
Comment 18 Erik Boritsch 2009-05-19 20:53:52 UTC
I am still getting the crash with kde-4.2.3.
Comment 19 Dario Andres 2009-05-20 17:55:22 UTC
Could you tell me what command are you using to start ksystraycmd (any example) so I can test it? As it doesn't crash for me here using 4.3trunk.
Thanks
Comment 20 Paul Hartman 2009-05-20 18:13:02 UTC
I switched from stock Qt to Qt-copy and now the crash is gone... using KDE 4.2.3

However ksystraycmd doesn't work properly but I suppose that's a different bug :)
Comment 21 Dario Andres 2009-05-20 20:30:17 UTC
@Paul: what Qt4 version were you using previously ? It may be unrelated so that's why I am wondering. 
Thanks
Comment 22 Paul Hartman 2009-05-20 22:34:18 UTC
I believe I was using Qt 4.5.1 release, now using qt-copy from cvs/svn/git/whatever it is on. Maybe it's just a coincidence but I had never used qt-copy before and ksystraycmd had never worked before in any kde4 version. :)
Comment 23 Pino Toscano 2009-05-25 12:40:26 UTC
*** Bug 191210 has been marked as a duplicate of this bug. ***
Comment 24 Richard Moore 2009-05-25 14:18:55 UTC
I've made some fixes in r972595 and r972590 that will hopefully address this.
Comment 25 Dario Andres 2009-06-15 01:47:51 UTC
I wonder if bug 196552 could be related to this too.
Comment 26 Pablo Montepagano 2009-06-15 01:58:16 UTC
I don't get the crash any more, but I get this output:

ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon "ksystraycmd"
ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon "ksystraycmd"
ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon "ksystraycmd"
ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon "ksystraycmd"


The icon that shows up in the systray is not of the app I want to launch, it's just the plasma icon.
And whenever I click on it, the panel simply disappears, and I have to kill plasma and run it again to get it back. Same behaviour with different types of apps (Firefox, for example).

I'm on KDE 4.2.3, so probably my report is outdated. Sorry for my lag.
Comment 27 Dario Andres 2009-06-15 02:04:37 UTC
(In reply to comment #26)
> I don't get the crash any more, but I get this output:
> 
> ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon
> "ksystraycmd"
> ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon
> "ksystraycmd"
> ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon
> "ksystraycmd"
> ksystraycmd(14711)/kdeui (KIconLoader) KIconLoader::loadIcon: No such icon
> "ksystraycmd"
> 
> 

This happens because, indeed, there is no "ksystraycmd" icon

> The icon that shows up in the systray is not of the app I want to launch, it's
> just the plasma icon.
> And whenever I click on it, the panel simply disappears, and I have to kill
> plasma and run it again to get it back. Same behaviour with different types of
> apps (Firefox, for example).
> 

This happens because if you do not specify the "-window" regexp parameter, KSystraycmd will take the first window ID it gets (like the WID of the desktop or panel of Plasma) and put its icon. (this will happen even if you start a new application like "ksystraycmd kwrite")

> I'm on KDE 4.2.3, so probably my report is outdated. Sorry for my lag.

This is still valid on trunk.
I was planning on refactoring this app a bit but it will need to wait until 4.4
Regards
Comment 28 Pablo Montepagano 2009-06-15 02:18:49 UTC
(In reply to comment #27)
> This happens because if you do not specify the "-window" regexp parameter,
> KSystraycmd will take the first window ID it gets (like the WID of the desktop
> or panel of Plasma) and put its icon. (this will happen even if you start a new
> application like "ksystraycmd kwrite")

Thank you! Now it does work! Using

ksystraycmd --window Mozilla --icon /usr/share/pixmaps/firefox.png firefox

now I can have Firefox in the systray.

One little detail: right-clicking on the icon produces two dialogs (one on top of the other): one for the Firefox window and the other for ksystraycmd. It's still very useful
Comment 29 Dario Andres 2009-07-18 21:56:07 UTC
*** Bug 200579 has been marked as a duplicate of this bug. ***
Comment 30 Christoph Feck 2009-07-20 14:53:02 UTC
*** Bug 196552 has been marked as a duplicate of this bug. ***
Comment 31 Christoph Feck 2009-07-21 14:13:24 UTC
SVN commit 1000474 by cfeck:

Fix reentrancy problem in NETRootInfo::update

See http://lists.kde.org/?l=kwin&m=124791974016062&w=2
Reviewed by Luboš Luňák

BUG: 170519
CCMAIL: kwin@kde.org


 M  +15 -6     netwm.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1000474
Comment 32 Christoph Feck 2009-07-21 14:14:55 UTC
SVN commit 1000475 by cfeck:

Fix reentrancy problem in NETRootInfo::update (backport r1000474)

CCBUG: 170519


 M  +15 -6     netwm.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1000475
Comment 33 Dario Andres 2009-07-24 20:10:39 UTC
*** Bug 201355 has been marked as a duplicate of this bug. ***
Comment 34 Pino Toscano 2009-08-02 17:12:51 UTC
*** Bug 202314 has been marked as a duplicate of this bug. ***
Comment 35 Christoph Feck 2009-08-06 21:52:19 UTC
*** Bug 202853 has been marked as a duplicate of this bug. ***
Comment 36 Chao Feng 2013-05-05 06:32:40 UTC
*** Bug 253350 has been marked as a duplicate of this bug. ***