Fix reentrancy problem in NETRootInfo::update

See http://lists.kde.org/?l=kwin&m=124791974016062&w=2
Reviewed by Luboš Luňák

BUG: 170519
CCMAIL: kwin@kde.org

svn path=/trunk/KDE/kdelibs/; revision=1000474